# mpa

./: .clang-format  .gitignore  CMakeLists.txt  README.md  autoformat
.github/workflows/: cmake.yml  main.yaml
cmake/: mpa_compilers.cmake  mpa_config.cmake  mpa_functions.cmake  mpa_test.cmake
examples/: CMakeLists.txt  integer_addition.cpp  integer_division.cpp  integer_multiplication.cpp  integer_reminder.cpp  integer_subtraction.cpp  simple_add.cpp
mpabase/: CMakeLists.txt
mpabase/core/: CMakeLists.txt
mpabase/core/include/: coreutils.h  mpacoredefs.h  mpacoreglobal.h  mpacoreutils.h  mpanumber.h
mpabase/core/src/: coreutils.cpp  mpacoreutils.cpp  mpanumber.cpp
mpabase/core/test/: CMakeLists.txt  ut_coreutils.cpp  ut_mpanumber.cpp
mpabase/include/: mpainteger.h  mpamath.h  mpanumber.h
mpabase/interface/: CMakeLists.txt
mpabase/interface/include/: mpainteger.h  mpainterfaceglobal.h
mpabase/interface/src/: mpainteger.cpp
mpabase/interface/test/: CMakeLists.txt  ut_mpainteger.cpp
mpabase/math/: CMakeLists.txt
mpabase/math/include/: mpaalgorithmsabstract.h  mpaalgorithmsfactoryabstract.h  mpaalgorithmsimplabstract.h  mpaintegeralgorithmsfactory.h  mpamath.h  mpamathglobal.h  mpamathimpl.h  mpastandardalgorithms.h  mpastandardalgorithmsimpl.h
mpabase/math/src/: mpaintegeralgorithmsfactory.cpp  mpamath.cpp  mpamathimpl.cpp  mpastandardalgorithms.cpp  mpastandardalgorithmsimpl.cpp
mpabase/math/test/: CMakeLists.txt  ut_addition.cpp  ut_division.cpp  ut_multiplication.cpp  ut_reminder.cpp  ut_subtraction.cpp
mpabase/src/: mpainteger.cpp  mpamath.cpp  mpanumber.cpp
mpabase/tools/: singleton.h
mpaerror/: CMakeLists.txt
mpaerror/include/: mpaexcept.h
mpaerror/src/: mpaexcept.cpp
mpaerror/test/: CMakeLists.txt  ut_basic_errors.cpp
mpalog/: CMakeLists.txt
mpalog/include/: mpalog.h
mpalog/src/: mpalog.cpp  mpalogbase.cpp  mpalogbase.h  mpalogutils.h
mpalog/test/: CMakeLists.txt  ut_mpalog.cpp
scripts/: generate_coverage.sh.in
tests/: CMakeLists.txt  main.cpp
